MDEV-6989 BINARY and COLLATE xxx_bin comparisions are not used for optimization in some cases